--- a/css/header_spritesconcat.css
+++ b/css/header_spritesconcat.css
@@ -2,36 +2,36 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
 
 @font-face {
-    font-family: 'azo_sansblack';
-    src: url('../fonts/azosans-black-webfont.woff2') format('woff2'),
-         url('../fonts/azosans-black-webfont.woff') format('woff');
+    font-family: 'Open_sansblack';
+    src: url('../fonts/Opensans-black-webfont.woff2') format('woff2'),
+         url('../fonts/Opensans-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'azo_sansbold';
-    src: url('../fonts/azosans-bold-webfont.woff2') format('woff2'),
-         url('../fonts/azosans-bold-webfont.woff') format('woff');
+    font-family: 'Open_sansbold';
+    src: url('../fonts/Opensans-bold-webfont.woff2') format('woff2'),
+         url('../fonts/Opensans-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'azo_sanslight';
-    src: url('../fonts/azosans-light-webfont.woff2') format('woff2'),
-         url('../fonts/azosans-light-webfont.woff') format('woff');
+    font-family: 'Open_sanslight';
+    src: url('../fonts/Opensans-light-webfont.woff2') format('woff2'),
+         url('../fonts/Opensans-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'azo_sansregular';
-    src: url('../fonts/azosans-regular-webfont.woff2') format('woff2'),
-         url('../fonts/azosans-regular-webfont.woff') format('woff');
+    font-family: 'Open_sansregular';
+    src: url('../fonts/Opensans-regular-webfont.woff2') format('woff2'),
+         url('../fonts/Opensans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -55,7 +55,7 @@ html {
   color: #8c8c8c !important;
 }
 #header_nav {
-    height: 60px !important;
+    height: 40px !important;
 }
 
 #header_nav .dijitInline.dijitDropDownButton {
@@ -214,7 +214,7 @@ span.down-arrow.blue-code {
 
 #quick_cart .container .list .details div.price.offerPrice.bold {
     font-size: 18px !important;
-	font-family: "Azo Sans", Tahoma, Geneva, sans-serif !important;
+	font-family: "Open Sans", Tahoma, Geneva, sans-serif !important;
 	color:#f27925 !important;
 	}
 
@@ -369,7 +369,7 @@ html body #logoArea a img {
     color: #f27925 !important;
     font-size: 14px !important;
 	font-family: 'Open Sans', sans-serif !important;
-    font-weight: bold !important;
+    font-weight: 600 !important;
     margin-right: 5px !important;
 }
 
@@ -513,12 +513,12 @@ border-radius: 5px;
 }
 
  .userFont{
-  font-weight: bold;
+  font-weight: 600;
  }
 
  #shopping-cart .text .tDigit{
   font-family: 'Open Sans', sans-serif !important;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 13px;
 }
 
@@ -735,7 +735,7 @@ background: #f27925 !important;
     z-index: 9999;
     font-size: 14px !important;
 	font-family: 'Open Sans', sans-serif !important;
-    font-weight: bold !important;
+    font-weight: 600 !important;
     color: #f27928 !important;
     line-height: 8% !important;
     width: 120% !important;
@@ -810,7 +810,6 @@ html body .slide {
 
 #buscador-responsive #header-search .search-txt {
     padding: 0px 12px !important;
-    height: 30px !important;
     margin: 4px 0 0 5px !important;
     box-shadow: none !important;
     width: 100% !important;
@@ -833,9 +832,9 @@ html body .slide {
 #buscador-responsive #header-search .search-btn a{ background : none !important; }
 .lupa_ico {
 	background-position: -155px -250px !important ;
-	width: 39px !important;
-	height: 39px !important;
-	margin : 3px 4px !important;
+	width: 33px !important;
+	height: 33px !important;
+	margin : 0px 4px !important;
 }
 
 #buscador-responsive #header-search .search-btn {
@@ -915,7 +914,7 @@ html body .slide {
 	font-size: 14px;
 	background-color: #f4f2f3 !important;
 	color:#666 !important;
-	font-weight: bold;
+	font-weight: 600;
 	padding:0 !important;
 	line-height: 55px;
 
@@ -932,7 +931,7 @@ html body .slide {
     top: -6px !important;
     width: 28px !important;
 	font-family: 'Open Sans', sans-serif !important;
-    font-weight: bold;
+    font-weight: 600;
 
 }
 
@@ -995,7 +994,7 @@ line-height: 55px;
 
 .cat-general {
     color: white;
-    font-family: Azo Sans, Open Sans, Tahoma;
+    font-family: Open Sans, Open Sans, Tahoma;
     font-weight: 400;
 }
 
@@ -1096,8 +1095,8 @@ line-height: 55px;
 /*Req.1019*/
 @media screen and (max-width: 670px) and (orientation: landscape) {
 #buscador-responsive {
-    padding: 1.5% 3% 2% !important;
-    top: 60px !important;
+    padding: 3% 3% 2% !important;
+    top: 75px !important;
     height: 55px !important;
     background-color: #f27925 !important;
     border-bottom: none!important;
@@ -1114,7 +1113,7 @@ line-height: 55px;
     left: 0% !important;
     font-size: 14px !important;
 	font-family: 'Open Sans', sans-serif !important;
-    font-weight: bold !important;
+    font-weight: 600 !important;
     color: #f27928 !important;
     line-height: 8% !important;
     width : 100% !important;
@@ -1297,10 +1296,12 @@ html body #logoArea a img {
 
 #buscador-responsive #header-search {
     width: 105% !important;
+    height: 35px;
+    }
 }
 
 #buscador-responsive #header-search .search-btn {
-    left: 93% !important;
+    left: 90% !important;
 }
 
 #dinamic_menu{
@@ -1697,7 +1698,7 @@ transition-delay: 0.5s;
 	height: 2px;
 }
 .anterior{
-	background-position: -684px -187px ;
+	background-position: -684px -190px ;
 	width: 30px;
 	height: 30px;
 }
@@ -1710,7 +1711,7 @@ transition-delay: 0.5s;
 }
 
 .siguiente{
-	background-position: -618px -185px ;
+	background-position: -618px -190px ;
 	width: 30px;
 	height: 30px;
 }
